# 2025-09-succinct

./: CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  asm-generator-simple.py  asm-template.rs  clippy.toml  fuzz-instructions.json  out_of_scope.txt  rustfmt.toml  scope.txt
crates/core/compiler/: Cargo.toml
crates/core/compiler/src/: main.rs
crates/core/compiler/src/ir/: ast.rs  builder.rs
crates/core/executor/: Cargo.toml
crates/core/executor/src/: air.rs  context.rs  cost.rs  estimator.rs  executor.rs  hook.rs  instruction.rs  io.rs  lib.rs  memory.rs  opcode.rs  opts.rs  profiler.rs  program.rs  record.rs  recursion.rs  register.rs  report.rs  retain.rs  state.rs  subproof.rs  utils.rs
crates/core/executor/src/artifacts/: rv64im_costs.json
crates/core/executor/src/disassembler/: elf.rs  rrs.rs
crates/core/executor/src/events/: byte.rs  global.rs  instr.rs  memory.rs  syscall.rs
crates/core/executor/src/syscalls/: code.rs  commit.rs  context.rs  deferred.rs  halt.rs  hint.rs  mod.rs  mprotect.rs  unconstrained.rs  verify.rs  write.rs
crates/core/machine/: Cargo.toml
crates/core/machine/src/: executor.rs  io.rs  lib.rs
crates/core/machine/src/adapter/: bump.rs  mod.rs  state.rs
crates/core/machine/src/air/: memory.rs  mod.rs  operation.rs  program.rs  word.rs
crates/core/machine/src/bytes/: air.rs  columns.rs  mod.rs  trace.rs
crates/core/machine/src/control_flow/: mod.rs
crates/core/machine/src/global/: mod.rs
crates/core/machine/src/memory/: bump.rs  global.rs  local.rs  mod.rs  page_prot.rs  page_prot_global.rs  page_prot_local.rs
crates/core/machine/src/operations/: add.rs  add4.rs  add5.rs  add_u32.rs  address.rs  addrs_add.rs  addw.rs  and_u32.rs  bitwise.rs  bitwise_u16.rs  clk.rs  fixed_rotate_right.rs  fixed_shift_right.rs  global_accumulation.rs  global_interaction.rs  is_equal_word.rs  is_zero.rs  is_zero_word.rs  mod.rs  msb.rs  mul.rs  not_u32.rs  page.rs  slt.rs  sp1_field_word.rs  sub.rs  subw.rs  syscall_addr.rs  u16_compare.rs  u16_operation.rs  u32_operation.rs  xor_u32.rs
crates/core/machine/src/program/: instruction.rs  instruction_decode.rs  instruction_fetch.rs  mod.rs  trusted.rs
crates/cuda/: Cargo.toml
crates/cuda/src/: api.rs  client.rs  cuslop.service.template  error.rs  lib.rs  pk.rs  server.rs
crates/hypercube/: Cargo.toml
crates/hypercube/src/: chip.rs  debug.rs  folder.rs  lib.rs  machine.rs  record.rs  septic_extension.rs  util.rs
crates/hypercube/src/air/: builder.rs  machine.rs  public_values.rs
crates/hypercube/src/ir/: ast.rs  expr.rs  lean.rs  shape.rs
crates/hypercube/src/logup_gkr/: cpu.rs  execution.rs  logup_poly.rs  mod.rs  prover.rs  verifier.rs
crates/hypercube/src/lookup/: builder.rs  debug.rs  interaction.rs
crates/hypercube/src/prover/: cpu.rs  machine.rs  memory_permit.rs  mod.rs  permits.rs  shard.rs  trace.rs
crates/hypercube/src/shape/: mod.rs
crates/hypercube/src/verifier/: config.rs  machine.rs  mod.rs  proof.rs  shard.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: consts.rs  lib.rs  types.rs
crates/prover/: Cargo.toml  compress_shape.json
crates/prover/scripts/: build_groth16_bn254.rs  build_plonk_bn254.rs  build_recursion_vks.rs  fibonacci_groth16.rs  fibonacci_sweep.rs  find_maximal_shapes.rs  find_oom_shapes.rs  find_recursion_shape.rs  find_small_shapes.rs  post_trusted_setup.rs  tendermint_sweep.rs  test_shape_fixing.rs
crates/prover/src/: build.rs  components.rs  core.rs  error.rs  lib.rs  local.rs  recursion.rs  shapes.rs  types.rs  utils.rs  verify.rs
crates/prover/src/gas/: mod.rs
crates/prover/src/recursion/: components.rs
crates/recursion/compiler/: Cargo.toml
crates/recursion/compiler/src/: config.rs
crates/recursion/executor/: Cargo.toml
crates/recursion/executor/src/: lib.rs  public_values.rs  record.rs  shape.rs
crates/recursion/gnark-ffi/: Cargo.toml  build.rs
crates/recursion/gnark-ffi/assets/: SP1VerifierGroth16.txt  SP1VerifierPlonk.txt
crates/recursion/gnark-ffi/go/: main.go
crates/recursion/gnark-ffi/src/: groth16_bn254.rs  koalabear.rs  lib.rs  plonk_bn254.rs  proof.rs  witness.rs
crates/recursion/machine/: Cargo.toml
crates/recursion/machine/src/: machine.rs  test.rs
crates/zkvm/entrypoint/: Cargo.toml
crates/zkvm/entrypoint/src/: lib.rs
examples/: Cargo.toml
examples/fibonacci-cuda/script/: Cargo.toml
examples/fibonacci-cuda/script/src/: main.rs
examples/fptower/script/: Cargo.toml
examples/fptower/script/src/: main.rs
examples/mprotect/script/: Cargo.toml
examples/mprotect/script/src/: main.rs
examples/poseidon2/script/: Cargo.toml
examples/poseidon2/script/src/: main.rs
examples/secp256k1/program/: Cargo.toml
examples/secp256k1/program/src/: main.rs
examples/ssz-withdrawals/script/: Cargo.toml
examples/ssz-withdrawals/script/src/: main.rs
patch-testing/sp1-test/: Cargo.toml
patch-testing/sp1-test/src/: lib.rs
slop/crates/adapter-prover/: Cargo.toml
slop/crates/adapter-prover/src/: lib.rs
slop/crates/baby-bear/: Cargo.toml
slop/crates/baby-bear/src/: baby_bear_poseidon2.rs  lib.rs
slop/crates/basefold/: Cargo.toml
slop/crates/basefold-prover/: Cargo.toml
slop/crates/basefold-prover/src/: configs.rs  encoder.rs  fri.rs  lib.rs  pow.rs  prover.rs
slop/crates/basefold/src/: code.rs  config.rs  lib.rs  verifier.rs
slop/crates/bn254/: Cargo.toml
slop/crates/bn254/src/: lib.rs
slop/crates/futures/: Cargo.toml
slop/crates/futures/src/: handle.rs  lib.rs  queue.rs  rayon.rs  scope.rs  values.rs
slop/crates/koala-bear/: Cargo.toml
slop/crates/koala-bear/src/: koala_bear_poseidon2.rs  lib.rs
slop/crates/merkle-tree/: Cargo.toml
slop/crates/merkle-tree/src/: bn254fr_poseidon2.rs  lib.rs  p3.rs  tcs.rs
slop/crates/multivariate-adapter/: Cargo.toml
slop/crates/multivariate-adapter/src/: air_types.rs  folder.rs  lib.rs  types.rs  verifier.rs
slop/crates/spartan/: Cargo.toml
slop/crates/spartan/src/: batched_lincheck_poly.rs  lib.rs  lincheck_poly.rs  prodcheck_poly.rs  proof.rs  prover.rs  r1cs.rs  sparse_matrix.rs  verifier.rs
(+576 files in other folders)
