[package]
name = "sp1-cuda"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
sp1-core-machine = { workspace = true }
sp1-prover = { workspace = true }
sp1-primitives = { workspace = true }
bincode = "1.3.3"
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1.4", features = ["full"] }
tracing = { workspace = true }
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json"
] }
serde_json = { workspace = true }
semver = { version = "1.0.26", features = ["serde"] }
bytes = "1.10.1"
users = "0.11.0"
daemonize = "0.5.0"

[dev-dependencies]
sp1-core-machine = { path = "../core/machine" }

[features]
native = []

[lints]
workspace = true
