[package]
name = "sp1-hypercube"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# sp1
sp1-derive = { workspace = true }
sp1-primitives = { workspace = true }

# slop
slop-algebra = { workspace = true }
slop-air = { workspace = true }
slop-alloc = { workspace = true }
slop-basefold = { workspace = true }
slop-basefold-prover = { workspace = true }
slop-commit = { workspace = true }
slop-jagged = { workspace = true }
slop-sumcheck = { workspace = true }
slop-tensor = { workspace = true }
slop-multilinear = { workspace = true }
slop-challenger = { workspace = true }
slop-matrix = { workspace = true }
slop-koala-bear = { workspace = true }
slop-symmetric = { workspace = true }
slop-merkle-tree = { workspace = true }
slop-futures = { workspace = true }

# p3
slop-uni-stark = { workspace = true }

# misc
futures = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
hashbrown = { version = "0.14.5", features = ["serde", "inline-more"] }
itertools = { workspace = true }
tracing = { workspace = true }
rayon-scan = "0.1.1"
rayon = "1.5.0"
thiserror = "1.0"
derive-where = { workspace = true }
deepsize2 = { workspace = true }

arrayref = "0.3.8"
num-bigint = { version = "0.4.3", default-features = false }

strum = { workspace = true }
strum_macros = { workspace = true }
num-traits = "0.2.19"
num_cpus = "1.16.0"

# async
tokio = { workspace = true }

[dev-dependencies]
sp1-zkvm = { workspace = true }
rand = "0.8.4"

[features]
test-proof = []

[lints]
workspace = true
