[package]
name = "sp1-primitives"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"

# Note: The release workflow depends on `sp1-build` version being set by the workspace, and that the `sp1-build` version refers to the canonical version.
# **Do not change this**, unless the release workflow is changed accordingly.
#
# The version of `sp1-build` is used for:
# - The name of the release tag on merge to `main`.
# - The default Docker image tag for this SP1 version..
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
bincode = "1.3.3"
blake3 = { workspace = true }
elf = { workspace = true }
hex = "0.4.3"
itertools = { workspace = true }
lazy_static = "1.5.0"
num-bigint = { version = "0.4.6", default-features = false }
slop-algebra = { workspace = true }
slop-challenger = { workspace = true }
slop-bn254 = { workspace = true }
slop-koala-bear = { workspace = true }
slop-poseidon2 = { workspace = true }
slop-symmetric = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.8"

[lints]
workspace = true
