[package]
name = "sp1-prover"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
exclude = ["src/vk_map.bin"]

[dependencies]
sp1-recursion-compiler = { workspace = true }
# sp1-recursion-core = { workspace = true }
sp1-recursion-circuit = { workspace = true }
sp1-recursion-machine = { workspace = true }
sp1-recursion-executor = { workspace = true }
sp1-recursion-gnark-ffi = { workspace = true }
sp1-core-machine = { workspace = true }
slop-challenger = { workspace = true }
slop-basefold = { workspace = true }
sp1-hypercube = { workspace = true }
slop-air = { workspace = true }
slop-jagged = { workspace = true }
slop-merkle-tree = { workspace = true }
slop-futures = { workspace = true }
slop-symmetric = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-primitives = { workspace = true }
slop-algebra = { workspace = true }
slop-koala-bear = { workspace = true }
slop-bn254 = { workspace = true }
# slop-util = { workspace = true }
bincode = "1.3.3"
serde = { workspace = true, features = ["derive", "rc"] }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2.3"
serde_json = { workspace = true }
clap = { version = "4.5.9", features = ["derive", "env"] }
anyhow = "1.0.83"
dirs = "5.0.1"
tokio = { workspace = true }
futures = { workspace = true }
serial_test = "3.1.1"
num-bigint = "0.4.6"
thiserror = "1.0.63"
sysinfo = "0.30.13"
lru = "0.12.4"
eyre = "0.6.12"
hashbrown = { workspace = true, features = ["inline-more"] }
enum-map = { version = "2.7.3" }
static_assertions = "1.1.0"
rand = "0.8"

[build-dependencies]
downloader = { version = "0.2", default-features = false, features = [
  "rustls-tls",
  "verify",
] }
sha2 = { version = "0.10" }
hex = "0.4"

[dev-dependencies]
test-artifacts = { path = "../test-artifacts" }
anyhow = "1.0.83"

# [[bin]]
# name = "build_plonk_bn254"
# path = "scripts/build_plonk_bn254.rs"

# [[bin]]
# name = "build_groth16_bn254"
# path = "scripts/build_groth16_bn254.rs"

[[bin]]
name = "build_recursion_vks"
path = "scripts/build_recursion_vks.rs"

# [[bin]]
# name = "find_maximal_shapes"
# path = "scripts/find_maximal_shapes.rs"

# [[bin]]
# name = "find_small_shapes"
# path = "scripts/find_small_shapes.rs"

# [[bin]]
# name = "find_oom_shapes"
# path = "scripts/find_oom_shapes.rs"

# [[bin]]
# name = "find_recursion_shape"
# path = "scripts/find_recursion_shape.rs"

# [[bin]]
# name = "test_shape_fixing"
# path = "scripts/test_shape_fixing.rs"

# [[bin]]
# name = "post_trusted_setup"
# path = "scripts/post_trusted_setup.rs"

[features]
native-gnark = ["sp1-recursion-gnark-ffi/native"]
debug = ["sp1-core-machine/debug"]
bigint-rug = ["sp1-core-machine/bigint-rug"]
unsound = []

[lints]
workspace = true
