[package]
name = "sp1-test"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
sp1-test-macro = { workspace = true }
rand = { workspace = true }
sha2-v0-9-8 = { workspace = true }
parking_lot = "0.12.3"
lazy_static = "1.5.0"
sp1-sdk = { workspace = true, features = ["unsound"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { workspace = true }
color-eyre = { workspace = true }

[target.'cfg(tokio_unstable)'.dependencies]
console-subscriber = { workspace = true }

[[bin]]
name = "post-to-github"
path = "bin/post_to_github.rs"
