[package]
name = "sp1-core-executor"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# sp1
sp1-primitives = { workspace = true }
sp1-curves = { workspace = true }
sp1-hypercube = { workspace = true }

# slop (replaced p3 dependencies)
slop-algebra = { workspace = true }
slop-maybe-rayon = { workspace = true }
slop-challenger = { workspace = true }
slop-air = { workspace = true }
slop-merkle-tree = { workspace = true }
slop-koala-bear = { workspace = true }
slop-symmetric = { workspace = true }
# misc
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
elf = { workspace = true }
rrs_lib = { package = "rrs-lib", git = "https://github.com/succinctlabs/rrs-succinct.git", branch = "gautham/rv64executor-2" }
eyre = "0.6.12"
bincode = "1.3.3"
hashbrown = { workspace = true, features = ["serde", "inline-more"] }
itertools = { workspace = true }
num = { version = "0.4.3" }
typenum = "1.17.0"
thiserror = "1.0.63"
tracing = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true, features = ["derive"] }
hex = "0.4.3"
bytemuck = "1.16.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
vec_map = { version = "0.8.2", features = ["serde"] }
enum-map = { version = "2.7.3", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
subenum = "1.1.2"
range-set-blaze = "0.1.16"
serde_arrays = "0.2"
deepsize2 = { workspace = true }

# profiling
goblin = { version = "0.9", optional = true }
rustc-demangle = { version = "0.1.18", optional = true }
gecko_profile = { version = "0.4.0", optional = true }
indicatif = { version = "0.17.8", optional = true }

[dev-dependencies]
sp1-zkvm = { path = "../../zkvm/entrypoint", features = ["lib"] }
test-artifacts = { path = "../../test-artifacts" }

[features]
bigint-rug = ["sp1-curves/bigint-rug"]
profiling = [
  "dep:goblin",
  "dep:rustc-demangle",
  "dep:gecko_profile",
  "dep:indicatif",
]

[lints]
workspace = true
