[package]
name = "sp1-recursion-gnark-ffi"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
slop-algebra = { workspace = true }
slop-symmetric = { workspace = true }
slop-koala-bear = { workspace = true }
sp1-recursion-compiler = { workspace = true }
sp1-primitives = { workspace = true }
sp1-hypercube = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tempfile = "3.10.1"
num-bigint = "0.4.6"
cfg-if = "1.0"
bincode = "1.3.3"
anyhow = "1.0.86"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]
bindgen = "0.70.1"
cfg-if = "1.0"

[features]
native = []

[lints]
workspace = true
