[package]
name = "sp1-zkvm"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
cfg-if = "1.0.0"
getrandom_v2 = { version = "0.2.15", features = ["custom"], package = "getrandom" }
getrandom_v3 = { version = "0.3.3" , package = "getrandom" }
rand = "0.8.5"
libm = { version = "0.2.8", optional = true }
sha2 = { version = "0.10.8" }
lazy_static = "1.5.0"
embedded-alloc = { version = "0.6.0" }
critical-section = { version = "1.2.0" }

# optional
sp1-lib = { workspace = true, optional = true }
sp1-primitives = { workspace = true }
slop-koala-bear = { workspace = true, optional = true }
slop-algebra = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }

[features]
default = ["libm", "lib"]
libm = ["dep:libm"]
lib = ["dep:sp1-lib"]
bump = []
verify = ["dep:slop-koala-bear", "dep:slop-algebra", "sp1-lib/verify"]
blake3 = ["dep:blake3"]
untrusted_programs = []

[lints]
workspace = true
