[package]
name = "poseidon2-script"
version = { workspace = true }
edition = { workspace = true }
default-run = "poseidon2-script"
publish = false

[dependencies]
hex = "0.4.3"
sp1-sdk = { workspace = true }
tokio = { workspace = true }
sp1-prover = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-build = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-primitives = { workspace = true }
tracing = "0.1"
[build-dependencies]
sp1-build = { workspace = true }

[[bin]]
name = "poseidon2-script"
path = "src/main.rs"
