[package]
name = "secp256k1-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = { workspace = true }
sp1-lib = { path = "../../../crates/zkvm/lib" }
num-bigint = "0.4"
sp1-curves = { path = "../../../crates/curves" }
common-test-utils = { path = "../../../crates/test-artifacts/programs/common" }
