[package]
name = "ssz-withdrawals-script"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
sp1-sdk = { workspace = true }
tokio = "1.42.0"
tracing = "0.1"

sp1-prover = { path = "../../../crates/prover" }

sp1-core-executor = { workspace = true }
sp1-build = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-primitives = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }

[[bin]]
name = "core_u64"
path = "bin/core_u64.rs"