[package]
name = "slop-basefold"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-algebra = { workspace = true }
slop-multilinear = { workspace = true }
slop-challenger = { workspace = true }
slop-utils = { workspace = true }
slop-commit = { workspace = true }
slop-tensor = { workspace = true }
slop-alloc = { workspace = true }
slop-baby-bear = { workspace = true }
slop-koala-bear = { workspace = true }
slop-symmetric = { workspace = true }
slop-merkle-tree = { workspace = true }
slop-bn254 = { workspace = true }

thiserror = "1.0"
itertools = "0.12.0"
serde = { version = "1.0.207", features = ["derive"] }
derive-where = { workspace = true }

[dev-dependencies]
slop-baby-bear = { workspace = true }
