[package]
name = "slop-bn254"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-bn254-fr = {workspace = true}
slop-challenger = { workspace = true }
slop-algebra = { workspace = true }
slop-poseidon2 = { workspace = true}
slop-symmetric = { workspace = true }
serde = { workspace = true }

