[package]
name = "slop-futures"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rayon = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

crossbeam = "0.8.4"
pin-project = "1"

[lints]
workspace = true
