[package]
name = "slop-koala-bear"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-koala-bear = { workspace = true }
lazy_static = "1.5.0"
slop-algebra = { workspace = true }
slop-challenger = { workspace = true }
slop-poseidon2 = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
