# [package]
# name = "slop-multivariate-adapter"
# serde = "1.0"
# version.workspace = true
# edition.workspace = true
# license.workspace = true
# repository.workspace = true
# keywords.workspace = true
# categories.workspace = true

# [dependencies]
# slop-algebra = { workspace = true}
# slop-multilinear = { workspace = true }

# p3-challenger = {workspace = true}
# p3-matrix = {workspace = true}
# p3-air = {workspace = true}
# p3-commit = {workspace = true}
# p3-uni-stark = {workspace = true}

# itertools = "0.12.0"
# thiserror = "1.0"
# serde = "1.0"
# tracing = "0.1.40"


# [dev-dependencies]
