[package]
name = "slop-spartan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-algebra = { workspace = true }
slop-multilinear = { workspace = true }
slop-challenger = { workspace = true }
slop-alloc = { workspace = true }
slop-sumcheck = { workspace = true }
slop-baby-bear = { workspace = true }
slop-merkle-tree = { workspace = true }
slop-pgspcs = { workspace = true }
futures = { workspace = true }
itertools = "0.12.0"
rand = "0.8.5"
tokio = { workspace = true }

[dev-dependencies]
